manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "tanzume-7e9f"
    labels:
        app: "tanzume-7e9f"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "tanzume-7e9f"
